@@ -1,3 +1,4 @@
+10/10/11 show precipitate numerically
 10/10/11 make beaker an observer of solution volume property
 10/10/11 add saturation to model
 10/10/11 add simple beaker
